@@ -237,6 +237,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 27473) Fix regression: bold, italic no longer interfere with linktrail for ca, kaa
 * (bug 28444) Fix regression: edit-on-doubleclick retains revision id again
 * &apos; character entity is now allowed in wikitext
+* UtfNormal::cleanUp on an invalid utf-8 sequence no longer returns false if intl installed.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
